chore: some UI polish
